--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.2"
+    "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^8.2.0",
+    "@supabase/supabase-js": "^2.50.0",
+    "@tailwindcss/vite": "^4.1.10",
+    "astro": "^5.9.2",
+    "dotenv": "^16.5.0",
+    "tailwindcss": "^4.1.10"
   }
 }
